--- a/src/components/ItemDetail/ItemDetail.module.css
+++ b/src/components/ItemDetail/ItemDetail.module.css
@@ -45,3 +45,21 @@
     color: #00a650;
 }
 
+.counter button {
+    width: 180px;
+}
+
+.inputCounter {
+    display: flex;
+    flex-direction: column;
+}
+
+.inputCounter h2{
+    font-size: 20px;
+    margin-bottom: 30px;
+    font-weight: 600;
+}
+
+.inputCounter button {
+    margin: 50px 0px 50px 0px;
+}
