--- a/src/components/CartView/CartView.module.css
+++ b/src/components/CartView/CartView.module.css
@@ -40,7 +40,10 @@ section {
 }
 
 .itemCart img {
-    width: 100px;
-    height: 100px;
+    width: 130px;
+    height: 110px;
 }
 
+.name {
+    font-weight: bold;
+}
