--- a/src/components/ItemListContainer/ItemListContainer.module.css
+++ b/src/components/ItemListContainer/ItemListContainer.module.css
@@ -5,4 +5,10 @@
     justify-content: center;
     align-items: center;
     padding: 30px 5px 0px 100px;
+
+}
+
+.spin {
+    margin: 30vh 0vh 0vh 98vh
+
 }
